# kubernetes-upgrade-readiness-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: main.py
docs/: architecture.md  report-reference.md  reproduction-guide.md  roadmap.md
examples/: README.md
fixtures/problematic/: eks-addons.json  legacy.yaml
fixtures/ready/: eks-addons.json  platform.yaml
reports/: renderers.py
rules/: addons.py  catalog.py
scanners/: addons.py  manifests.py
tests/: test_cli.py  test_rules.py
